<resources>
    <string name="app_name">Mojivet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="moji_vet">Moji Vet</string>
    <string name="mojivet_gmail_com">mojivet@gmail.com</string>
    <string name="appointment">Appointment</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="mojivet">Mojivet</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="send_code">Send Code</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_registered">Already Registered?</string>
    <string name="log_in_here">Log in here.</string>
    <string name="name">Name</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="char_pass">********</string>
    <string name="sign_up">Sign up</string>
    <string name="date">Date</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_type">Pet Type</string>
    <string name="submit">Submit</string>
    <string name="concern">Concern</string>
    <string name="choose_veterinarian">Choose Veterinarian</string>
    <string name="cats_and_dogs">Cats and dogs</string>
    <string name="lname">Last Name</string>
    <string name="cpass">Confirm Password</string>
    <string name="emailll">Enter Email</string>
    <string name="passs">Enter Password</string>
    <string name="dog">Dog</string>
    <string name="welcome_to_mojivet">Welcome to MojiVet!</string>
    <string name="schedule_your_pet_s_appointment_easily_and_experience_tailored_veterinary_excellence">Schedule your pet\'s appointment easily and experience tailored veterinary excellence</string>
    <string name="paws_and_hooves_hearts_and_health_where_compassion_meets_care">PAWS and Hooves, Hearts and Health - Where Compassion Meets Care!</string>
    <string name="create_and_manage_personalized_profiles_for_each_of_your_pets_keep_track_of_their_medical_history_vaccination_records_and_communicate_directly_with_our_team_through_the_platform_ask_questions_share_concerns_and_receive_guidance_withoud_the_need_for_a_phone_call">Create and manage personalized profiles for each of your pets. Keep track of their medical history, vaccination records, and communicate directly with our team through the platform. Ask questions, share concerns, and receive guidance withoud the need for a phone call.</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="dhaveacc">"Don't Have an Account?"</string>
    <string name="sghere">Sign Up Here</string>
    <string name="cntus">Contact Us</string>
    <string name="phnum">Telephone No:</string>
    <string name="numph">090-080-0650 / 090-070-0430</string>
    <string name="eadd">Email Address:</string>
    <string name="adde">mojivet@gmail.com</string>
    <string name="loc">Location:</string>
    <string name="locadd">123 AB Fernandez,Dagupan City</string>
    <string name="profile">Profile</string>
    <string name="photos">Photos</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>
    <string name="contactmascot">contactmascot</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="save">Save</string>
    <string name="cat">cat</string>
    <string name="max_survived_from_parvo">Max survived from parvo</string>
    <string name="max1">Life in Parvoopolis was tough for a stray dog like Max, especially with the looming threat of the deadly parvovirus lurking around every corner. But max was determined to survive, his spirit unbroken despited the hardships he faced.</string>
    <string name="max2">One fateful day, as Max was scavenging for food in a run- down alley, he encountered a group of other dogs who had fallen victim to the ravages of parvovirus. They were weak and emaciated, their once-glossy coats now dull and matted with filth. Max knew he had to do something to help them, but he also knew that he was risking his own life by staying in such close proximity to the infected dogs.</string>
    <string name="luna_survived_from_bacteria_infection">Luna survived from Bacteria infection</string>
    <string name="luna_details">Life in Whisker Hollow was idyllic, with the townsfolk going about their days in peaceful harmony. Luna spent her time exploring the nooks and crannies of the town, basking in the warmth of the sun and chasing after butterflies in the meadows. However, one day, tragedy struck when Luna fell ill with a severe bacterial infection. The normally lively cat became lethargic and weak, her once-shiny coat now dull and unkempt. The townsfolk were devastated by Luna\'s plight, fearing that they might lose their beloved feline friend.</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="log_in">Log in</string>
    <string name="forgot_pass1">Forgot Password?</string>
    <string name="edit_prof">Edit Profile</string>



</resources>

