<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.Signup">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mojivet"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_here"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/juan_dela_cruz"
        android:autofillHints="name"
        android:inputType="text"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:textSize="16sp"
        android:hint="@string/example_gmail_com"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/char_pass"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/char_pass"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/sign_up"/>

</LinearLayout>