<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/baseline_image_24"
            android:title="@string/photos"/>

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/baseline_call_24"
            android:title="@string/contact_us"/>

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>
    </group>

    <item
        android:id="@+id/menu_logout"
        android:title=""
        tools:showIn="navigation_view">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>