<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.Signup"
    android:background="@drawable/headerbg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mojivet"
        android:gravity="center"
        android:textSize="50sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:gravity="center"
        android:textSize="28sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/juan_dela_cruz"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/char_pass"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/cpass"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textSize="20dp" />

</LinearLayout>