<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profiling.ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mojivet"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="60sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:hint="@string/email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:textAlignment="viewStart">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/send_code"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>