<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".profiling.Signup"
    android:background="@drawable/headerbg">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mojivet"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:shadowColor="#C0C0C0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="#333333"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowColor="#C0C0C0"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"
        card_view:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        card_view:startIconDrawable="@drawable/baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dhaveacc"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sghere"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                android:textColor="@color/bright_blue"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>