<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profiling.ForgotPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:clickable="false"
        android:focusable="false"
        android:src="@drawable/vetbg"
        android:contentDescription="@string/cats_and_dogs"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/mojivet"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:shadowColor="#C0C0C0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleTextView"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="28sp"
            android:textColor="#333333"
            android:padding="16dp"
            android:elevation="4dp"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowColor="#C0C0C0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textborder1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/send_code"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
