<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/vetbg"
    tools:context=".profiling.Signup">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mojivet"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:shadowColor="#C0C0C0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textSize="28sp"
        android:textColor="#333333"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowColor="#C0C0C0"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@drawable/textborder1"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/baseline_email_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/textborder1"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/textborder1"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/textborder1"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textSize="20sp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/textborder1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_registered"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_here"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                android:textColor="@color/bright_blue"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>

