<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".nav_drawer.Photos"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/photos"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:shadowColor="#C0C0C0"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/chihuahuahua"
                android:contentDescription="@string/dog">
            </ImageView>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/max_survived_from_parvo"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#333333"
                android:shadowColor="#C0C0C0"
                android:shadowRadius="3"
                android:shadowDy="2"
                android:shadowDx="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/linear1"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/max1"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/max2"
                android:textSize="14sp"/>
        </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/catmeow"
                        android:contentDescription="@string/cat">
                    </ImageView>

                    <TextView
                        android:text="@string/luna_survived_from_bacteria_infection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="#333333"
                        android:shadowColor="#C0C0C0"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/linear2"
                    android:layout_margin="20dp">
                    <TextView
                        android:text="@string/luna_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>
                </LinearLayout>
            </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>