<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_bottom.Appointment"
    android:id="@+id/home"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <ImageView
            android:src="@drawable/beauty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dog">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/welcome_to_mojivet"
            android:textStyle="bold"
            android:layout_marginStart="20dp">

        </TextView>
        <TextView
            android:text="@string/schedule_your_pet_s_appointment_easily_and_experience_tailored_veterinary_excellence"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="260dp"
            android:layout_marginStart="20dp">

        </TextView>

    </androidx.cardview.widget.CardView>
</LinearLayout>